; ModuleID = '/home/carl/AnghaBench/linux/fs/ocfs2/extr_dir.c_ocfs2_dx_dir_kmalloc_leaves.c'
source_filename = "/home/carl/AnghaBench/linux/fs/ocfs2/extr_dir.c_ocfs2_dx_dir_kmalloc_leaves.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.buffer_head = type { i32 }
%struct.super_block = type { i32 }

@GFP_NOFS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.buffer_head** (%struct.super_block*, i32*)* @ocfs2_dx_dir_kmalloc_leaves to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.buffer_head** @ocfs2_dx_dir_kmalloc_leaves(%struct.super_block* %0, i32* %1) #0 {
  %3 = alloca %struct.super_block*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.buffer_head**, align 8
  store %struct.super_block* %0, %struct.super_block** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load %struct.super_block*, %struct.super_block** %3, align 8
  %8 = call i32 @ocfs2_clusters_to_blocks(%struct.super_block* %7, i32 1)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* @GFP_NOFS, align 4
  %11 = call %struct.buffer_head** @kcalloc(i32 %9, i32 8, i32 %10)
  store %struct.buffer_head** %11, %struct.buffer_head*** %6, align 8
  %12 = load %struct.buffer_head**, %struct.buffer_head*** %6, align 8
  %13 = icmp ne %struct.buffer_head** %12, null
  br i1 %13, label %14, label %20

14:                                               ; preds = %2
  %15 = load i32*, i32** %4, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %17, label %20

17:                                               ; preds = %14
  %18 = load i32, i32* %5, align 4
  %19 = load i32*, i32** %4, align 8
  store i32 %18, i32* %19, align 4
  br label %20

20:                                               ; preds = %17, %14, %2
  %21 = load %struct.buffer_head**, %struct.buffer_head*** %6, align 8
  ret %struct.buffer_head** %21
}

declare dso_local i32 @ocfs2_clusters_to_blocks(%struct.super_block*, i32) #1

declare dso_local %struct.buffer_head** @kcalloc(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
